[tool.poetry]
name = "nlp-proj"
version = "0.1.0"
description = ""
authors = ["Leonid Sidorov <leon.sidorov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.1.2"
transformers = {extras = ["torch"], version = "^4.36.2"}
scikit-learn = "^1.3.2"
datasets = "^2.16.0"
evaluate = "^0.4.1"
sentencepiece = "^0.1.99"
ipykernel = "^6.27.1"
ipywidgets = "^8.1.1"
seqeval = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
